--- a/sox-noise.ui
+++ b/sox-noise.ui
@@ -47,6 +47,7 @@
   <object class="GtkWindow" id="main-window">
     <property name="can-focus">False</property>
     <property name="title" translatable="yes">SoX Noise</property>
+    <property name="icon-name">audio-volume-high</property>
     <property name="gravity">center</property>
     <property name="startup-id">sox-noise</property>
     <signal name="destroy" handler="onDestroy" swapped="no"/>
