--- a/main.ui
+++ b/main.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.38.1 -->
+<!-- Generated with glade 3.38.2 -->
 <interface>
   <requires lib="gtk+" version="3.24"/>
   <object class="GtkAdjustment" id="adj-band-center">
@@ -34,10 +34,10 @@
     <signal name="value-changed" handler="valueChanged" swapped="no"/>
   </object>
   <object class="GtkAdjustment" id="adj-tremolo-speed">
-    <property name="upper">100</property>
+    <property name="upper">10</property>
     <property name="value">30</property>
     <property name="step-increment">1</property>
-    <property name="page-increment">10</property>
+    <property name="page-increment">1</property>
     <signal name="value-changed" handler="valueChanged" swapped="no"/>
   </object>
   <object class="GtkAdjustment" id="adj-volume">
@@ -45,7 +45,7 @@
     <property name="upper">100</property>
     <property name="value">100</property>
     <property name="step-increment">10</property>
-    <property name="page-increment">20</property>
+    <property name="page-increment">10</property>
     <signal name="value-changed" handler="valueChanged" swapped="no"/>
   </object>
   <object class="GtkImage" id="play-img">
@@ -350,7 +350,7 @@
                   <object class="GtkFrame">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="tooltip-text" translatable="yes">Periodically raise and lower the volume.  Set the rate in mHz.</property>
+                    <property name="tooltip-text" translatable="yes">Periodically raise and lower the volume.</property>
                     <property name="label-xalign">0</property>
                     <child>
                       <object class="GtkAlignment">
@@ -368,6 +368,9 @@
                             <signal name="button-release-event" handler="doneAdjusting" swapped="no"/>
                             <signal name="move-slider" handler="doneAdjusting" swapped="no"/>
                             <signal name="scroll-event" handler="doneAdjusting" swapped="no"/>
+                            <style>
+                              <class name="lpad"/>
+                            </style>
                           </object>
                         </child>
                       </object>
