--- a/main.ui
+++ b/main.ui
@@ -35,7 +35,7 @@
   </object>
   <object class="GtkAdjustment" id="adj-tremolo-speed">
     <property name="upper">10</property>
-    <property name="value">30</property>
+    <property name="value">3</property>
     <property name="step-increment">1</property>
     <property name="page-increment">1</property>
     <signal name="value-changed" handler="valueChanged" swapped="no"/>
@@ -350,7 +350,7 @@
                   <object class="GtkFrame">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="tooltip-text" translatable="yes">Periodically raise and lower the volume.</property>
+                    <property name="tooltip-text" translatable="yes">Periodically raise and lower the volume. (cycles per minute)</property>
                     <property name="label-xalign">0</property>
                     <child>
                       <object class="GtkAlignment">
