--- a/main.ui
+++ b/main.ui
@@ -55,6 +55,7 @@
   </object>
   <object class="GtkWindow" id="main-window">
     <property name="can-focus">False</property>
+    <property name="title" translatable="yes">SoX Noise</property>
     <property name="resizable">False</property>
     <property name="icon-name">audio-volume-high</property>
     <property name="gravity">center</property>
@@ -474,18 +475,6 @@
             <property name="fill">True</property>
             <property name="position">5</property>
           </packing>
-        </child>
-      </object>
-    </child>
-    <child type="titlebar">
-      <object class="GtkHeaderBar">
-        <property name="visible">True</property>
-        <property name="can-focus">False</property>
-        <property name="title" translatable="yes">Sox Noise</property>
-        <property name="has-subtitle">False</property>
-        <property name="show-close-button">True</property>
-        <child>
-          <placeholder/>
         </child>
       </object>
     </child>
