--- a/main.ui
+++ b/main.ui
@@ -152,7 +152,7 @@
       </packing>
     </child>
   </object>
-  <object class="GtkWindow" id="main-window">
+  <object class="GtkApplicationWindow" id="main-window">
     <property name="can-focus">False</property>
     <property name="resizable">False</property>
     <property name="window-position">center</property>
