--- a/main.ui
+++ b/main.ui
@@ -18,6 +18,12 @@
     <property name="page-increment">100</property>
     <signal name="value-changed" handler="valueChanged" swapped="no"/>
   </object>
+  <object class="GtkAdjustment" id="adj-lowpass">
+    <property name="upper">3000</property>
+    <property name="step-increment">1</property>
+    <property name="page-increment">100</property>
+    <signal name="value-changed" handler="valueChanged" swapped="no"/>
+  </object>
   <object class="GtkAdjustment" id="adj-reverb">
     <property name="upper">100</property>
     <property name="value">18</property>
@@ -477,6 +483,47 @@
                       <object class="GtkFrame">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
+                        <property name="tooltip-text" translatable="yes">Filter out the high-pitched noises, disable with 0</property>
+                        <property name="label-xalign">0</property>
+                        <child>
+                          <object class="GtkAlignment">
+                            <property name="visible">True</property>
+                            <property name="can-focus">False</property>
+                            <property name="left-padding">12</property>
+                            <child>
+                              <object class="GtkScale">
+                                <property name="name">lowpass</property>
+                                <property name="visible">True</property>
+                                <property name="can-focus">True</property>
+                                <property name="adjustment">adj-lowpass</property>
+                                <property name="round-digits">0</property>
+                                <property name="digits">0</property>
+                                <property name="value-pos">left</property>
+                                <signal name="button-release-event" handler="doneAdjusting" swapped="no"/>
+                                <signal name="move-slider" handler="doneAdjusting" after="yes" swapped="no"/>
+                                <signal name="scroll-event" handler="doneAdjusting" swapped="no"/>
+                              </object>
+                            </child>
+                          </object>
+                        </child>
+                        <child type="label">
+                          <object class="GtkLabel">
+                            <property name="visible">True</property>
+                            <property name="can-focus">False</property>
+                            <property name="label" translatable="yes">Lowpass</property>
+                          </object>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkFrame">
+                        <property name="visible">True</property>
+                        <property name="can-focus">False</property>
                         <property name="tooltip-text" translatable="yes">Periodically raise and lower the volume. (cycles per minute)</property>
                         <property name="label-xalign">0</property>
                         <child>
@@ -514,7 +561,7 @@
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">True</property>
-                        <property name="position">1</property>
+                        <property name="position">2</property>
                       </packing>
                     </child>
                     <child>
@@ -555,7 +602,7 @@
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">True</property>
-                        <property name="position">2</property>
+                        <property name="position">3</property>
                       </packing>
                     </child>
                   </object>
